# qfin-cpp

./: .gitignore  CMakeLists.txt  README.md
include/qfin/: util.hpp
src/: main.cpp
tests/: test_util.cpp
